--- a/album.css
+++ b/album.css
@@ -165,7 +165,7 @@ body {
 	width: 450px;
 	background: rgba(0, 0, 0, 0.4);
 	padding: 40px;
-	text-allign: center;
+	text-align: center;
 	margin: auto;
 	margin-top: 5%;
 	color: white;
@@ -192,4 +192,26 @@ body {
 
 .box p2{
 	text-align: justify;
+}
+
+ul{
+  margin: 0;
+  padding: 0;
+}
+
+.box li{
+  display: inline-block;
+  margin: 6px;
+  list-style: none;
+}
+
+.box li a{
+color: white;
+text-decoration: none;
+font-size: 60px;
+transition: all ease-in-out 250ms;
+}
+
+.box li a:hover{
+  color: #b9b9b9;
 }
